# hubmap-fairness-project

./: LICENSE  README.md  pyproject.toml
fair_hubmap_sdk/: assessor.py  cli.py
tests/: test_assessor.py
